Fixed background bug on mobile

--- a/app/edit/PasswordForm.module.css
+++ b/app/edit/PasswordForm.module.css
@@ -12,7 +12,6 @@
     left: 0px;
     width: 100vw;
     height: 100vh;
-    overflow: hidden;
 }
 
 .background {
@@ -20,9 +19,8 @@
     position: fixed;
     top: 0px;
     width: 100vw;
-    height: 100vh;
+    height: 150vh;
     opacity: 100%;
-    overflow: hidden;
 }
 
 .password_box {
