--- a/app/modules/App.module.css
+++ b/app/modules/App.module.css
@@ -44,8 +44,8 @@
     position: fixed;
     top: 0px;
     left: 0px;
-    width: 0%;
-    height: 0%;
+    width: 100%;
+    height: 150%;
 
     /* Sets the z-index to ensure it appears at the very back. */
     z-index: -100;
@@ -61,7 +61,7 @@
     top: 0px;
     left: 0px;
     width: 100%;
-    height: 100%;
+    height: 150%;
 
     /* Sets the z-index to ensure it appears at the very back. */
     z-index: -100;
